--- a/index.html
+++ b/index.html
@@ -179,28 +179,9 @@
 
     <div id="head-cover" class="card-deck"> </div>
     <!--<div ><img src = " https://img.bagevent.com/resource/20190327/0933532821803.png">-->
-    </div>
-    <div id="about" class="container text-center mx-auto">
-
-        <iframe id="promote_ticket_iframe" width="100%" src="//www.bagevent.com/widget/ticket/2202999?widget=2" frameborder="0" scrolling="no"></iframe>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['BagEventIFrameResize'] = r;
-                i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        };
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.bagevent.com/resources/js/iframeResizer/iframeResizer.min.js', 'bfr');
-            bfr('iFrameResize', {checkOrigin: false, heightCalculationMethod: 'taggedElement'}, "#promote_ticket_iframe");
-        </script>
-    </div>
 </div>
 
-<div class="container-fluid speakers-section" >
+<div class="container-fluid chairmans-section" >
     <div  class="container text-center mx-auto">
         <div>
             <h1 class="title" align="left">关于 MTSC 2019</h1>
@@ -218,7 +199,8 @@
             </p>
         </div>
     </div>
-    <br />
+</div>
+<div class="container-fluid speakers-section" >
     <div  class="container text-center mx-auto">
         <div id="manager-slogan">
     <h1 class="title text-left"  >名企测试经理寄语</h1>
@@ -418,7 +400,7 @@
     <div class="container text-center mx-auto">
         <h1 class="title"  align="left">大会议题</h1>
         <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1526445451803.jpg?imageView2/2/w/1100/interlace/1/q/100">
-        <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1530268211803.jpg?imageView2/2/w/1100/interlace/1/q/100">
+        <img class="card-img-top" src="https://img.bagevent.com/resource/20190514/1700230601803.jpg?imageView2/2/w/1100/interlace/1/q/100">
         <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1530270271803.jpg?imageView2/2/w/1100/interlace/1/q/100" >
     </div>
 </div>
@@ -697,9 +679,28 @@
         </div>
         <hr>
         <div class="card">
-            <h2 class="title">去年赞助商</h2>
-            <img class="card-img" src="http://2019.test-china.org/images/9a2dc53e-1aa2-4372-b28b-b525132891fd.png"
-                 alt="赞助商">
+            <div id="about" class="container text-center mx-auto">
+
+                <iframe id="promote_ticket_iframe" width="100%" src="//www.bagevent.com/widget/ticket/2202999?widget=2" frameborder="0" scrolling="no"></iframe>
+                <script>
+                    (function (i, s, o, g, r, a, m) {
+                        i['BagEventIFrameResize'] = r;
+                        i[r] = i[r] || function () {
+                                    (i[r].q = i[r].q || []).push(arguments)
+                                };
+                        a = s.createElement(o),
+                                m = s.getElementsByTagName(o)[0];
+                        a.async = 1;
+                        a.src = g;
+                        m.parentNode.insertBefore(a, m)
+                    })(window, document, 'script', '//www.bagevent.com/resources/js/iframeResizer/iframeResizer.min.js', 'bfr');
+                    bfr('iFrameResize', {checkOrigin: false, heightCalculationMethod: 'taggedElement'}, "#promote_ticket_iframe");
+                </script>
+            </div>
+            </div>
+            <!--<h2 class="title">去年赞助商</h2>-->
+            <!--<img class="card-img" src="http://2019.test-china.org/images/9a2dc53e-1aa2-4372-b28b-b525132891fd.png"-->
+                 <!--alt="赞助商">-->
         </div>
     </div>
 </div>
