更新赞助单位

--- a/index.html
+++ b/index.html
@@ -829,9 +829,32 @@
 <div class="container-fluid sponsors-section">
     <div   id="sponsors" class="container text-center mx-auto">
         <h1 class="title">赞助单位</h1>
-        <a class="btn btn-primary" href="mailto:bd@testerhome.com?subject=申请赞助商">虚位以待</a>
+        <ul>
 
-        <div>
+            <li>
+                <a href="https://wetest.qq.com/">
+                    <img style="max-height: 240px;
+                                    " class="card-img-top" src="https://img.bagevent.com/resource/20190610/0944148261803.png?imageView2/2/w/1100/interlace/1/q/100"
+                         alt="wetest">
+                </a>
+            </li>
+            <li>
+                <a href="http://www.spasvo.com/">
+                    <img style="max-height: 240px;
+                                    " class="card-img-top" src="https://img.bagevent.com/resource/20190610/1312158381803.png?imageView2/2/w/1100/interlace/1/q/100"
+                         alt="泽众软件">
+                </a>
+            </li>
+            <li>
+                <a href="https://testing-studio.com/">
+                    <img style="max-height: 240px;
+                                    " class="card-img-top" src="https://img.bagevent.com/resource/20190610/0953062131803.png?imageView2/2/w/1100/interlace/1/q/100"
+                         alt="测吧">
+                </a>
+            </li>
+       </ul>
+
+            <div>
             <h2 class="title">合作伙伴</h2>
 
 
